--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <!-- <script src="http://webapi.amap.com/maps?v=1.4.3&key=3910a844be295cd0a8cb336180521f9d"></script> -->
 <script type="text/javascript">
     window.localStorage.setItem('mobileId', returnCitySN.cip);
-    // 禁用浏览器自带的 滑动事件
-    document.body.addEventListener('touchmove', function(e) {
-        e.preventDefault();
-    });
+    // // 禁用浏览器自带的 滑动事件
+    // document.body.addEventListener('touchmove', function(e) {
+    //     e.preventDefault();
+    // });
+    window.addEventListener('touchmove', e => e.preventDefault())
+    // window.addEventListener('touchmove', func, { passive: false })
 //     window.localStorage.setItem('userAgent',window.navigator.userAgent);
 //     // 获取手机机型
 //     alert(window.navigator.userAgent);
